--- a/src/settings/Security.settings
+++ b/src/settings/Security.settings
@@ -14,6 +14,10 @@
             <start>115.254.0.0</start>
         </ipRanges>
         <ipRanges>
+            <end>107.4.103.198</end>
+            <start>107.4.103.198</start>
+        </ipRanges>
+        <ipRanges>
             <end>103.255.255.255</end>
             <start>103.255.0.0</start>
         </ipRanges>
